# whatdoesthisboxdo

./: .env.example  .gitignore  Dockerfile  README.md  analyzer.py  batch_processor.py  config.json.example  docker-compose.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
analyzers/: __init__.py  datadog_analyzer.py  file_analyzer.py  history_analyzer.py  metrics_monitor.py  pattern_learner.py  process_analyzer.py  remote_analyzer.py  windows_analyzer.py
connectors/: __init__.py  datadog_connector.py  gitlab_connector.py  harbor_connector.py  local_executor.py  proxmox_connector.py  ssh_executor.py  vcenter_connector.py  winrm_executor.py
docs/: ansible-full-recreation.md  api-reference.md  architecture.md  cloud-providers.md  configuration.md  containerization-planner.md  cost-estimation.md  datadog-integration.md  output-reference.md  using-iac.md
generators/: __init__.py  ansible_full_generator.py  ansible_generator.py  aws_generator.py  azure_generator.py  containerization_planner.py  cost_estimator.py  doc_generator.py  gcp_generator.py  packer_generator.py  terraform_generator.py
scripts/: collect_system_state.sh
tests/: __init__.py  conftest.py  test_cost_estimator.py  test_database.py  test_generators.py  test_web_api.py
web/: app.py  database.py
web/static/: sample_servers.csv
web/static/css/: style.css
web/static/js/: main.js
web/templates/: analyze.html  base.html  batch.html  docs.html  index.html  job_status.html  jobs.html  view_json.html  view_markdown.html
(+17 files in other folders)
